--- a/pom.xml
+++ b/pom.xml
@@ -15,10 +15,19 @@
 		<system>Github</system>
 		<url>https://github.com/wavesoftware/java-preferences-hiera/issues</url>
 	</issueManagement>
+	
+	<licenses>
+		<license>
+			<name>The Apache Software License, Version 2.0</name>
+			<url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
+			<distribution>repo</distribution>
+		</license>
+	</licenses>
 
 	<scm>
-		<connection>git://github.com/wavesoftware/java-preferences-hiera.git</connection>
-		<url>https://github.com/wavesoftware/java-preferences-hiera</url>
+		<connection>scm:git:git://github.com/wavesoftware/java-preferences-hiera.git</connection>
+		<developerConnection>scm:git:git://github.com/wavesoftware/java-preferences-hiera.git</developerConnection>
+		<url>git://github.com/wavesoftware/java-preferences-hiera.git</url>
 	</scm>
 
 	<developers>
