--- a/pom.xml
+++ b/pom.xml
@@ -47,6 +47,44 @@
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 	</properties>
 
+	<profiles>
+
+		<profile>
+			<id>ci</id>
+
+			<build>
+				<plugins>
+					<plugin>
+						<groupId>org.jacoco</groupId>
+						<artifactId>jacoco-maven-plugin</artifactId>
+						<version>0.6.3.201306030806</version>
+
+						<executions>
+							<execution>
+								<id>jacoco-initialize</id>
+								<goals>
+									<goal>prepare-agent</goal>
+								</goals>
+							</execution>
+							<execution>
+								<id>jacoco-site</id>
+								<phase>test</phase>
+								<goals>
+									<goal>report</goal>
+								</goals>
+							</execution>
+						</executions>
+						<configuration>
+							<includes>
+								<include>pl/wavesoftware/**</include>
+							</includes>
+						</configuration>
+					</plugin>
+				</plugins>
+			</build>
+		</profile>
+	</profiles>
+
 	<build>
 		<plugins>
 			<plugin>
@@ -55,7 +93,7 @@
 				<version>2.14.1</version>
 				<configuration>
 					<systemPropertyVariables>
-                        <java.util.prefs.PreferencesFactory>pl.wavesoftware.util.preferences.impl.hiera.HieraPreferencesFactory</java.util.prefs.PreferencesFactory>
+						<java.util.prefs.PreferencesFactory>pl.wavesoftware.util.preferences.impl.hiera.HieraPreferencesFactory</java.util.prefs.PreferencesFactory>
 					</systemPropertyVariables>
 				</configuration>
 			</plugin>
