Jacoco verion update to working one

--- a/pom.xml
+++ b/pom.xml
@@ -45,7 +45,6 @@
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <jacoco-maven-plugin.version>0.7.5.201505241946</jacoco-maven-plugin.version>
     </properties>
 
     <profiles>
@@ -58,7 +57,7 @@
                     <plugin>
                         <groupId>org.jacoco</groupId>
                         <artifactId>jacoco-maven-plugin</artifactId>
-                        <version>${jacoco-maven-plugin.version}</version>
+                        <version>0.7.4.201502262128</version>
 
                         <executions>
                             <execution>
